--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
+    "@types/angular": "^1.6.28",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "0.0.14",
     "gulp-strip-comments": "^2.4.3",
-    "typings": "^1.3.1"
+    "gulp-typescript": "^3.2.1",
+    "typescript": "^2.4.2"
   }
 }
